C/examples/pracc/good/makefile.msc
#-----------------------------------------------#
#	Makefile for dos systems		#
#    using a Microsoft Visual C++ compiler	#
#-----------------------------------------------#
CC=cl
#
# Flags 
#	AL -- Compile for large model
#	Zi -- Enable debugging
#	W1 -- Turn on warnings
#
CFLAGS=/AL /Zi /W1

good.exe: good.c
	$(CC) $(CFLAGS) good.c

clean:
	erase good.exe 
