C/examples/pracc/bad/makefile.msc
#-----------------------------------------------#
#	Makefile for dos systems		#
#    using a Microsoft Visual C++ compiler	#
#-----------------------------------------------#
CC=cl
#
# Flags 
#	AL -- Compile for large model
#	Zi -- Enable debugging
#	W1 -- Turn on warnings
#
CFLAGS=/AL /Zi /W1

bad.exe: bad.c
	$(CC) $(CFLAGS) bad.c

clean:
	erase bad.exe 
